dsp/haskelldsp/Numeric/Special/Bessel_stub_ffi.h

extern double prim_bessel_J0(double x);

extern void* prim_bessel_J0_e(double x);

extern double access_prim_bessel_J0_e_val(HsPtr);

extern double access_prim_bessel_J0_e_err(HsPtr);

extern int access_prim_bessel_J0_e_gc_failed(HsPtr);

extern void* access_prim_bessel_J0_e_gc_failstring(HsPtr);

extern double prim_bessel_J1(double x);

extern void* prim_bessel_J1_e(double x);

extern double access_prim_bessel_J1_e_val(HsPtr);

extern double access_prim_bessel_J1_e_err(HsPtr);

extern int access_prim_bessel_J1_e_gc_failed(HsPtr);

extern void* access_prim_bessel_J1_e_gc_failstring(HsPtr);

extern double prim_bessel_Jn(int n,double x);

extern void* prim_bessel_Jn_e(int n,double x);

extern double access_prim_bessel_Jn_e_val(HsPtr);

extern double access_prim_bessel_Jn_e_err(HsPtr);

extern int access_prim_bessel_Jn_e_gc_failed(HsPtr);

extern void* access_prim_bessel_Jn_e_gc_failstring(HsPtr);

extern double prim_bessel_Y0(double x);

extern void* prim_bessel_Y0_e(double x);

extern double access_prim_bessel_Y0_e_val(HsPtr);

extern double access_prim_bessel_Y0_e_err(HsPtr);

extern int access_prim_bessel_Y0_e_gc_failed(HsPtr);

extern void* access_prim_bessel_Y0_e_gc_failstring(HsPtr);

extern double prim_bessel_Y1(double x);

extern void* prim_bessel_Y1_e(double x);

extern double access_prim_bessel_Y1_e_val(HsPtr);

extern double access_prim_bessel_Y1_e_err(HsPtr);

extern int access_prim_bessel_Y1_e_gc_failed(HsPtr);

extern void* access_prim_bessel_Y1_e_gc_failstring(HsPtr);

extern double prim_bessel_Yn(int n,double x);

extern void* prim_bessel_Yn_e(int n,double x);

extern double access_prim_bessel_Yn_e_val(HsPtr);

extern double access_prim_bessel_Yn_e_err(HsPtr);

extern int access_prim_bessel_Yn_e_gc_failed(HsPtr);

extern void* access_prim_bessel_Yn_e_gc_failstring(HsPtr);

extern double prim_bessel_I0(double x);