dsp/haskelldsp/Numeric/Special/Bessel.hs

{-# OPTIONS -fffi -fvia-C #-}

-----------------------------------------------------------------------------
-- |
-- Module      :  Numeric.Special.Bessel
-- Copyright   :  (c) Matthew Donadio 2003
-- License     :  GPL
--
-- Maintainer  :  m.p.donadio@ieee.org
-- Stability   :  experimental
-- Portability :  portable
--
-- FFI to GSL for the Bessel functions
--
-----------------------------------------------------------------------------

module Numeric.Special.Bessel (bessel_J0, bessel_J0_e,
			       bessel_J1, bessel_J1_e,
			       bessel_Jn, bessel_Jn_e,

			       bessel_Y0, bessel_Y0_e,
			       bessel_Y1, bessel_Y1_e,
			       bessel_Yn, bessel_Yn_e,

			       bessel_I0, bessel_I0_e,
			       bessel_I1, bessel_I1_e,
			       bessel_In, bessel_In_e,

			       bessel_I0_scaled, bessel_I0_scaled_e,
			       bessel_I1_scaled, bessel_I1_scaled_e,
			       bessel_In_scaled, bessel_In_scaled_e,

			       bessel_K0, bessel_K0_e,
			       bessel_K1, bessel_K1_e,
			       bessel_Kn, bessel_Kn_e,

			       bessel_K0_scaled, bessel_K0_scaled_e,
			       bessel_K1_scaled, bessel_K1_scaled_e,
			       bessel_Kn_scaled, bessel_Kn_scaled_e,

			       bessel_j0, bessel_j0_e,
			       bessel_j1, bessel_j1_e,
			       bessel_jl, bessel_jl_e,

			       bessel_y0, bessel_y0_e,
			       bessel_y1, bessel_y1_e,
			       bessel_yl, bessel_yl_e,

			       bessel_i0_scaled, bessel_i0_scaled_e,
			       bessel_i1_scaled, bessel_i1_scaled_e,
			       bessel_il_scaled, bessel_il_scaled_e,

			       bessel_k0_scaled, bessel_k0_scaled_e,
			       bessel_k1_scaled, bessel_k1_scaled_e,
			       bessel_kl_scaled, bessel_kl_scaled_e,

			       bessel_Jnu, bessel_Jnu_e,
			       bessel_Ynu, bessel_Ynu_e,
			       bessel_Inu, bessel_Inu_e,
			       bessel_Inu_scaled, bessel_Inu_scaled_e,
			       bessel_Knu, bessel_Knu_e,
			       bessel_Knu_scaled, bessel_Knu_scaled_e,
			       bessel_lnKnu, bessel_lnKnu_e,

                               bessel_zero_J0,  bessel_zero_J0_e,
                               bessel_zero_J1,  bessel_zero_J1_e,
                               bessel_zero_Jnu, bessel_zero_Jnu_e
			      ) where

import StdDIS

import Foreign


-------------------------------------------------------------------------------

bessel_J0 :: Double -> Double
bessel_J0 x =
  unsafePerformIO(
    prim_bessel_J0 x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_J0" prim_bessel_J0 :: Double -> IO (Double)

bessel_J0_e :: Double -> (Double,Double)
bessel_J0_e x =
  unsafePerformIO(
    prim_bessel_J0_e x
    >>= \ gc_result ->
    access_prim_bessel_J0_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_J0_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_J0_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_J0_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_J0_e" prim_bessel_J0_e :: Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_J0_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_J0_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_J0_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_J0_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_J1 :: Double -> Double
bessel_J1 x =
  unsafePerformIO(
    prim_bessel_J1 x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_J1" prim_bessel_J1 :: Double -> IO (Double)

bessel_J1_e :: Double -> (Double,Double)
bessel_J1_e x =
  unsafePerformIO(
    prim_bessel_J1_e x
    >>= \ gc_result ->
    access_prim_bessel_J1_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_J1_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_J1_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_J1_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_J1_e" prim_bessel_J1_e :: Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_J1_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_J1_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_J1_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_J1_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_Jn :: Int -> Double -> Double
bessel_Jn n x =
  unsafePerformIO(
    prim_bessel_Jn n x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_Jn" prim_bessel_Jn :: Int -> Double -> IO (Double)

bessel_Jn_e :: Int -> Double -> (Double,Double)
bessel_Jn_e n x =
  unsafePerformIO(
    prim_bessel_Jn_e n x
    >>= \ gc_result ->
    access_prim_bessel_Jn_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_Jn_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_Jn_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_Jn_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_Jn_e" prim_bessel_Jn_e :: Int -> Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Jn_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Jn_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Jn_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Jn_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_Y0 :: Double -> Double
bessel_Y0 x =
  unsafePerformIO(
    prim_bessel_Y0 x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_Y0" prim_bessel_Y0 :: Double -> IO (Double)

bessel_Y0_e :: Double -> (Double,Double)
bessel_Y0_e x =
  unsafePerformIO(
    prim_bessel_Y0_e x
    >>= \ gc_result ->
    access_prim_bessel_Y0_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_Y0_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_Y0_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_Y0_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_Y0_e" prim_bessel_Y0_e :: Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Y0_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Y0_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Y0_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Y0_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_Y1 :: Double -> Double
bessel_Y1 x =
  unsafePerformIO(
    prim_bessel_Y1 x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_Y1" prim_bessel_Y1 :: Double -> IO (Double)

bessel_Y1_e :: Double -> (Double,Double)
bessel_Y1_e x =
  unsafePerformIO(
    prim_bessel_Y1_e x
    >>= \ gc_result ->
    access_prim_bessel_Y1_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_Y1_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_Y1_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_Y1_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_Y1_e" prim_bessel_Y1_e :: Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Y1_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Y1_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Y1_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Y1_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_Yn :: Int -> Double -> Double
bessel_Yn n x =
  unsafePerformIO(
    prim_bessel_Yn n x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_Yn" prim_bessel_Yn :: Int -> Double -> IO (Double)

bessel_Yn_e :: Int -> Double -> (Double,Double)
bessel_Yn_e n x =
  unsafePerformIO(
    prim_bessel_Yn_e n x
    >>= \ gc_result ->
    access_prim_bessel_Yn_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_Yn_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_Yn_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_Yn_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_Yn_e" prim_bessel_Yn_e :: Int -> Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Yn_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Yn_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Yn_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Yn_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_I0 :: Double -> Double
bessel_I0 x =
  unsafePerformIO(
    prim_bessel_I0 x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_I0" prim_bessel_I0 :: Double -> IO (Double)
